--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-  
+ <style>
   <body>
-    Hello world..push
+    ":)"
+   background-color: #121110;
   </body>
+  </style>
 </html>
