--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
  <style>
+  body {
+  background-color: #121110;
+  }
+    </style>
+ 
   <body>
-    ":)"
-   background-color: #121110;
+    Hiya
   </body>
-  </style>
+
 </html>
